// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`G-code snapshot — carvera_3axis.hbs > carvera 3-axis dialect 1`] = `
"; Makera Carvera — 3-Axis G-code
; Machine: Makera Carvera — carvera-3ax
; Operation: Snapshot Carvera 3-Axis
; ---------------------------------------------------------------------------
; SAFETY CHECKLIST:
; [1] Workpiece securely clamped to table
; [2] Correct tool loaded in ATC slot (T1–T6)
; [3] Work coordinate system (WCS) zeroed — use G10 L20 P1 or controller UI
; [4] Air-cut first: spindle off, Z raised, 10% feed override
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Carvera firmware docs
; before running on the machine.
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from Makera CAM.
; See docs/MACHINES.md — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; ATC: Carvera 6-slot auto tool changer (T1–T6). T0 = probe, T-1 = no tool.
; After M6, the machine automatically probes tool length.
; G43 H(tool#) applies tool length compensation.
; G49 cancels tool length compensation at program end.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; Spindle range: 6000–15000 RPM
; ---------------------------------------------------------------------------
G21              ; millimeters
G90              ; absolute positioning
G17              ; XY plane
; --- Tool change (ATC) ---
; Verify tool number matches the slot loaded in the Carvera ATC.
M6 T1            ; select tool 1 and execute tool change (auto-probes length)
G43 H1           ; apply tool length compensation for tool 1

; Safe retract and spindle start
G0 Z100 ; safe Z retract
M3 S12000
G4 P2            ; dwell 2s for spindle to reach speed

; --- Toolpath ---
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; --- end toolpath ---

; --- End ---
M5
G49              ; cancel tool length compensation
G0 Z100 ; retract Z
G0 X0 Y0        ; park X Y
M9               ; coolant/vacuum off
M2               ; program end (NOT M30 — M30 may delete file on Smoothieware)
"
`;

exports[`G-code snapshot — carvera_4axis.hbs > carvera 4-axis dialect 1`] = `
"; Makera Carvera — 4-Axis Rotary G-code
; Machine: Makera Carvera 4-Axis — carvera-4ax
; Operation: Snapshot Carvera 4-Axis
; ---------------------------------------------------------------------------
; SAFETY CHECKLIST:
; [1] Rotary attachment secured to table
; [2] Stock centered in chuck, tailstock engaged
; [3] Stock diameter matches CAM setup (Y dimension)
; [4] Z=0 is at stock CENTER (rotation axis), NOT surface
; [5] A=0 set via controller or G28.3 A0
; [6] Air-cut first: spindle off, Z raised, 10% feed override
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Carvera firmware docs
; and your rotary attachment manual before running on the machine.
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from Makera CAM.
; See docs/MACHINES.md — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: continuous (verify against firmware soft limits)
; Spindle range: 6000–15000 RPM
; ---------------------------------------------------------------------------
G21              ; millimeters
G90              ; absolute positioning
G17              ; XY plane
; Safe retract, center on rotary axis, and spindle start
G0 Z100 ; safe Z retract
G0 Y0            ; CRITICAL: center tool on rotation axis (Y must be 0 for 4-axis)
M3 S12000
G4 P2            ; dwell 2s for spindle to reach speed
; --- 4-axis toolpath moves begin (X Y Z A words) ---
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
; --- end toolpath ---
; --- End ---
M5
G0 Z100 ; retract Z
G0 A0            ; return A to zero
G0 X0 Y0        ; park X, re-center Y on rotation axis
M9               ; coolant/vacuum off
M2               ; program end (NOT M30 — M30 may delete file on Smoothieware)
"
`;

exports[`G-code snapshot — cnc_4axis_grbl.hbs > grbl_4axis dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; 4-AXIS (A-ROTARY) G-CODE — grbl_4axis dialect
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Carvera firmware docs
; and your rotary attachment manual before running on the machine.
; ---------------------------------------------------------------------------
; CRITICAL 4TH AXIS CHECKS BEFORE RUNNING:
; (1) Confirm the rotary attachment is firmly clamped to the table.
; (2) Confirm the workpiece is centred on the rotary chuck — off-centre
;     stock causes gouging and crashes.
; (3) Confirm cylinder diameter matches the value used to generate toolpaths.
; (4) Set A-axis WCS zero (usually the left face of the cylinder, A=0°).
; (5) Air-cut with spindle off at 10 % feed override before a real cut.
; (6) Confirm your Carvera firmware supports the A word in Grbl (some builds
;     require the rotary axis plugin — check Makera documentation).
; ---------------------------------------------------------------------------
; Retract order: lift Z to a safe radial clearance before commanding large A moves
; (toolpath lines already use clearance Z between passes; header retract is machine max Z).
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from Makera CAM.
; See docs/MACHINES.md — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: ±360° (verify against firmware soft limits)
G21              ; millimeters — must match Carvera controller settings
G90              ; absolute distance mode (X Y Z A all absolute)
G17              ; XY plane for G2/G3 arcs; 4-axis arcs use XZ with G18 if needed
; Operation: Snapshot 4-Axis GRBL
; Home / safe position — retract Z before rotating A to avoid collisions
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 Y0            ; CRITICAL: center tool on rotation axis (Y must be 0 for 4-axis rotary)
; Spindle on (Grbl — confirm S value matches your bit and material)
M3 S12000
; --- 4-axis toolpath moves begin (X Y Z A words) ---
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
; --- end toolpath ---
; Spindle off
M5
; Retract Z to machine max clearance and park
; (Toolpath already returns A to 0° and retracts Z to clearance;
;  this final retract ensures the tool is at machine-max Z for unload.)
G0 Z100 ; full retract for unload
G0 X0 Y0        ; park X, re-center Y on rotation axis
; M30 or M2 if your Grbl build supports program end (comment out if unsupported)
M30
"
`;

exports[`G-code snapshot — cnc_5axis_fanuc.hbs > fanuc 5-axis dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; 5-AXIS SIMULTANEOUS G-CODE — Fanuc dialect
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller manual before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; CRITICAL 5-AXIS CHECKS BEFORE RUNNING:
; (1) Confirm machine kinematic type matches profile (table-table, table-head,
;     or head-head). Wrong kinematics = wrong tool tip position = CRASH.
; (2) Confirm G43.4 (RTCP / TCP) is available and calibrated on your control.
;     Without RTCP, the programmed XYZ point is the rotary center, NOT the
;     tool tip — the tool will gouge or miss the part.
; (3) Confirm A-axis and B-axis travel limits match the profile ranges.
; (4) Confirm tool length compensation (H value) is correct — G43.4 uses it.
; (5) Air-cut with spindle off at 10% feed override before any real cut.
; (6) Watch for singularities near A=0/B=0 (gimbal lock region) — feed may
;     spike. Reduce override near vertical orientations.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: 360°
; B-axis range: 120°
; Kinematic chain: table-head
; Max tilt from vertical: 60°
G21        ; G21=mm / G20=inch — must match controller defaults
G90              ; absolute distance mode (X Y Z A B all absolute)
G17              ; XY plane for arcs
G40 G49 G80     ; cancel cutter comp, tool length comp, canned cycles
; Operation: Snapshot 5-Axis Fanuc
; --- RTCP (Rotary Tool Center Point) ---
; G43.4 tells the control to keep the tool tip at programmed XYZ regardless
; of A/B rotation. Remove this line ONLY if your post-processor already
; accounts for kinematic offsets in the XYZ coordinates.
G43.4 H1        ; RTCP on — verify H number matches your tool offset
; Spindle on
M3 S10000
; --- 5-axis toolpath moves begin (X Y Z A B words) ---
G0 X0 Y0 Z30 A0 B0
G1 X10 Y10 Z-1.000 A15 B10 F500
G1 X20 Y10 Z-1.000 A30 B-5 F500
G1 X20 Y20 Z-1.500 A15 B0 F500
G0 Z30 A0 B0
; --- end toolpath ---
; Spindle off
M5
; Cancel RTCP before retracting
G49              ; cancel tool length / RTCP
; Safe retract
G0 Z100
G0 A0 B0         ; return rotary axes to zero
G0 X0 Y0         ; park — adjust to your safe park position
M30
"
`;

exports[`G-code snapshot — cnc_5axis_siemens.hbs > siemens 5-axis dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; 5-AXIS SIMULTANEOUS G-CODE — Siemens Sinumerik dialect
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller manual before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; CRITICAL 5-AXIS CHECKS BEFORE RUNNING:
; (1) Confirm machine data (MD) for kinematic chain matches this profile.
;     TRAORI reads pivot point distances from MD — wrong MD = wrong TCP.
; (2) Confirm TRAORI is licensed and configured ($MC_TRAFO_TYPE_1, etc.).
; (3) Confirm A-axis and B/C-axis travel limits and soft limits.
; (4) Confirm tool length in the tool table (D1) is correct.
; (5) Air-cut with spindle off at 10% feed override before any real cut.
; (6) CYCLE800 (SWIVEL) may be needed before TRAORI if using tilted work
;     planes — this template does not emit CYCLE800.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: 360°
; B-axis range: 120°
; Kinematic chain: table-table
; Max tilt from vertical: 60°
G21        ; G21=mm / G20=inch — must match controller defaults
G90              ; absolute distance mode
G17              ; XY plane for arcs
; Operation: Snapshot 5-Axis Siemens
; --- Activate 5-axis orientation transformation ---
; TRAORI tells Sinumerik to maintain tool tip at programmed XYZ regardless
; of rotary axis positions. This is mandatory for simultaneous 5-axis.
TRAORI(1)        ; activate transformation — number matches your kinematic setup
; Spindle on
M3 S10000
; --- 5-axis toolpath moves begin (X Y Z A B words) ---
G0 X0 Y0 Z30 A0 B0
G1 X10 Y10 Z-1.000 A15 B10 F500
G1 X20 Y10 Z-1.000 A30 B-5 F500
G1 X20 Y20 Z-1.500 A15 B0 F500
G0 Z30 A0 B0
; --- end toolpath ---
; Spindle off
M5
; Deactivate transformation before retracting
TRAFOOF          ; transformation off
; Safe retract
G0 Z100
G0 A0 B0         ; return rotary axes to zero
G0 X0 Y0         ; park — adjust to your safe park position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Fanuc dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Fanuc
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S10000
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > GRBL dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — GRBL
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S12000
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > GRBL dialect with WCS offset 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Active work offset — verify fixture zero matches G54–G59 selection
G56
; Operation: Snapshot WCS — G56
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S12000
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Heidenhain dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Heidenhain
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S10000
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Mach3 dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Mach3
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Siemens dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Siemens
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S10000
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30
"
`;
